[cmake] exlcude ruff cache from dist

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -353,6 +353,7 @@ if(NOT hasParent)
             "/\.gitmodules$"
             "/\.idea/"
             "/\.mypy_cache/"
+            "/\.ruff_cache/"
             "/build/"
             "/stage/"
             "/conda/conda-bld/"
